# derive-visitor

./: Cargo.toml  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
derive-visitor/: Cargo.toml
derive-visitor-macros/: Cargo.toml
derive-visitor-macros/src/: lib.rs
derive-visitor/src/: lib.rs
derive-visitor/tests/: dyn_visitor.rs  leaf_iterator.rs  test_containers.rs  test_std_types.rs  test_visitor_mut.rs
example/: Cargo.toml
example/src/: main.rs
src/: example.rs  lib.rs
