[package]
name = "derive-visitor-macros"
description = "Macros for derive-visitor package"
categories = ["development-tools"]
version = "0.4.0"
authors = ["Kit Isaev <14875494+nikis05@users.noreply.github.com>"]
license = "MIT"
documentation = "https://docs.rs/derive-visitor"
repository = "https://github.com/nikis05/derive-visitor"
keywords = ["visitor", "derive", "macro"]
edition = "2018"

[lib]
proc_macro = true

[dependencies]
convert_case = "0.4.0"
itertools = "0.10.1"
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.75", features = ["extra-traits"] }
